# gorlov_kirill_rep

./: .gitignore  README.MD  config.py  dsf  env.example  main.py  pyproject.toml
data/: transactions_excel.xlsx
src/: decorators.py  external_api.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
